--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --font-main: 'Inria Serif', serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -13,15 +14,30 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    --my-color: #fff;
+    --font-color: #465661;
+
   }
 }
 
+html {
+  background: rgb(var(--my-color));
+  color: rgb(var(--font-color));
+}
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(var(--font-color));
+  background: rgb(var(--my-color));
+  font-family: var(--font-main);
+}
+
+main {
+  width: auto;
+  color: rgb(var(--font-color));
+  min-height: calc(100vh - 11rem);
+}
+
+.mainContainer {
+  width: 100%;
+  overflow: hidden;
 }
