--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -41,3 +41,31 @@ main {
   width: 100%;
   overflow: hidden;
 }
+
+input:not([type="file"]) {
+  background: #4656613D;
+  border: .5px solid #999;
+  transition: all 300ms ease-in-out;
+  border-radius: 1rem;
+  outline: none;
+  padding: 1rem
+}
+
+input:not([type="file"]):focus {
+  border: .5px solid rgb(59 130 246 / 0.5);
+  background: #FFFFFF;
+}
+
+textarea {
+  background: #4656613D;
+  border: .5px solid #999;
+  transition: all 300ms ease-in-out;
+  border-radius: 1rem;
+  outline: none;
+  padding: 1rem
+}
+
+textarea:focus {
+  border: .5px solid rgb(59 130 246 / 0.5);
+  background: #FFFFFF;
+}
