--- a/frontend/app/components/SideBar/style.css
+++ b/frontend/app/components/SideBar/style.css
@@ -39,22 +39,97 @@ li img {
 
 }
 
-@keyframes close {
-    from {
-        width: 20%;
+@media screen and (min-width: 1024px) {
+    @keyframes close {
+        from {
+            width: 20%;
+        }
+
+        to {
+            width: 0;
+            height: 0;
+        }
     }
 
-    to {
-        width: 0;
+    @keyframes open {
+        from {
+            width: 0;
+            height: 0;
+        }
+
+        to {
+            width: 20%;
+        }
     }
 }
 
-@keyframes open {
-    from {
-        width: 0;
+@media screen and (max-width: 1024px) {
+    .sideBar {
+        width: 100%;
+        height: 100vh;
+        color: rgb(var(--font-color));
+        /* transition: all 0.5s ease; */
+        overflow: hidden;
     }
 
-    to {
-        width: 20%;
+    li {
+        list-style: none;
     }
+
+    li a {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+        overflow: hidden;
+        color: rgb(var(--font-color));
+    }
+
+    li img {
+        width: 60%;
+        height: auto;
+    }
+
+    .close,
+    .open {
+        transition: all 0.3s ease-in-out;
+    }
+
+    .close {
+        animation: close 0.3s ease-in-out forwards;
+    }
+
+    .open {
+        animation: open 0.3s ease-in-out forwards;
+    }
+
+    @keyframes close {
+        from {
+            width: 100%;
+            z-index: 999;
+            position: fixed;
+
+        }
+
+        to {
+            width: 0;
+
+        }
+    }
+
+    @keyframes open {
+        from {
+            width: 0;
+            height: 100vh;
+
+        }
+
+        to {
+            width: 100%;
+            z-index: 999;
+            position: fixed;
+
+        }
+    }
+
 }
