--- a/frontend/app/components/SideBar/style.css
+++ b/frontend/app/components/SideBar/style.css
@@ -31,11 +31,11 @@ li img {
 }
 
 .close {
-    animation: close 0.3s ease-in forwards;
+    animation: close 0.3s linear forwards;
 }
 
 .open {
-    animation: open 0.3s ease-in forwards;
+    animation: open 0.3s linear forwards;
 
 }
 
@@ -70,23 +70,28 @@ li img {
         color: rgb(var(--font-color));
         /* transition: all 0.5s ease; */
         overflow: hidden;
+        background: #fff;
+        z-index: 999;
     }
 
     li {
         list-style: none;
+        justify-content: center;
+        align-items: center;
     }
 
     li a {
         width: 100%;
         height: 100%;
         display: flex;
+        justify-content: center;
         flex-wrap: nowrap;
         overflow: hidden;
         color: rgb(var(--font-color));
     }
 
     li img {
-        width: 60%;
+        width: 30%;
         height: auto;
     }
 
@@ -103,17 +108,20 @@ li img {
         animation: open 0.3s ease-in-out forwards;
     }
 
+    .hidden {
+        display: none;
+    }
+
     @keyframes close {
         from {
             width: 100%;
             z-index: 999;
             position: fixed;
-
         }
 
         to {
             width: 0;
-
+            display: none;
         }
     }
 
@@ -121,7 +129,6 @@ li img {
         from {
             width: 0;
             height: 100vh;
-
         }
 
         to {
