--- a/frontend/app/components/Header/style.css
+++ b/frontend/app/components/Header/style.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1024) {
+@media screen and (max-width: 1024px) {
     .navContainer {
         display: fixed;
         top: 0;
