--- a/frontend/app/components/Header/ProfileBar/style.css
+++ b/frontend/app/components/Header/ProfileBar/style.css
@@ -6,7 +6,28 @@
     display: none;
 }
 
+.usernameFloat {
+    clip-path: polygon(50% 0%, 60% 11%, 100% 11%, 100% 100%, 0 100%, 0 11%, 40% 11%);
+    animation: usernameFloat 2s infinite;
+    border-radius: 0.5rem;
+}
+
+@keyframes usernameFloat {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-5px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
 @media screen and (max-width: 1024px) {
+
     .profileMob {
         display: flex;
     }
