--- a/frontend/app/components/SideBar/style.css
+++ b/frontend/app/components/SideBar/style.css
@@ -4,7 +4,7 @@
     padding-bottom: 9rem;
     color: rgb(var(--font-color));
     transition: all 0.5s ease;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 li {
