--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -20,6 +20,12 @@
   }
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 html {
   background: rgb(var(--my-color));
   color: rgb(var(--font-color));
